2014-06-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Check kpse_in_name_ok and kpse_out_name_ok in extractbb.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-05-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: disable warnings in the case of -q option.

2014-05-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfobj.[ch] (pdf_unshift_array): Bug fix: correctly copy array
	elements, using memmove().  Declare pdf_unshift_array as static.
	Bug reported by Richard M Kreuter <kreuter@progn.net>.

2014-05-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bmpimage.c: Error exit instead of crashing for unsupported
	bmp inclusion in bmp_include_image().

2014-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Move special-case single option --help or --version
	after determination of program name (from Heiko).
	Change my_name for extractbb and ebb.
	xbb.c: Move '++flag' from inside 'if()' to 'then' part of the
	'if' statement (from Heiko).

2014-04-30  Khaled Hosny  <khaledhosny@eglug.org>

	* tt_cmap.c: [XDVIPDFMX] prefere glyph name for glyph with PUA or
	alphabetic presentation forms entries in font cmap.

2014-04-24  Karl Berry  <karl@tug.org>

	* man/dvipdfm.1,
	* Makefile.am (dist_man1_MANS): rename man page to dvipdfmx.1.
	(man1_links): make a dvipdfm.1 link.
	[XDVIPDFMX]: make an xdvipdfmx.1 link.

2014-04-17  Karl Berry  <karl@tug.org>

	* dvipdfmx.c (show_usage): default map in practice is pdftex.map.
	* man/dvipdfm.1: major update to something closer to current
	reality, from Bob Tennent and me.

2014-03-31  Karl Berry  <karl@tug.org>

	* dvipdfmx.c (show_usage): avoid long lines in help msg,
	include bug reporting address, and
	(show_version): use printf instead of fprintf(stdout.

2014-03-24  Karl Berry  <karl@tug.org>

	* error.c (WARN, ERROR): use my_name, not loud stars.
	#include "dvipdfmx.h" for decl.
	* tt_table.c: use WARN for warnings, not fprintf.
